@@ -73,7 +73,6 @@ use Digest::SHA1;
 use Time::Local;
 use MIME::Parser;
 use Sys::Hostname;
-use Sys::Syslog;
 use File::Spec qw ();
 use Errno qw(ENOENT EACCES);
 
@@ -582,7 +581,12 @@ sub hour_str {
 }
 
 {
-	my $_syslogopen = undef;
+	# Reworked detection/usage of Sys::Syslog or Unix::Syslog as
+	# appropriate is mostly borrowed from Log::Syslog::Abstract, to which
+	# I'd love to convert at some point.
+	my $_syslogsub = undef;
+	my $_openlogsub = undef;
+	my $_fac_map   = undef;
 
 	#***********************************************************************
 	# %PROCEDURE: md_openlog
@@ -592,12 +596,28 @@ sub hour_str {
 	# %RETURNS:
 	#  Nothing
 	# %DESCRIPTION:
-	#  Opens a log using Sys::Syslog
+	#  Opens a log using either Unix::Syslog or Sys::Syslog
 	#***********************************************************************
 	sub md_openlog
 	{
 		my ($tag, $facility) = @_;
-		return Sys::Syslog::openlog($tag, 'pid,ndelay', $facility);
+
+		if( ! defined $_openlogsub ) {
+			# Try Unix::Syslog first, then Sys::Syslog
+			eval qq{use Unix::Syslog qw( :macros ); };
+			if(!$@) {
+				($_openlogsub, $_syslogsub) = _wrap_for_unix_syslog();
+			} else {
+				eval qq{use Sys::Syslog ();};
+				if(!$@) {
+					($_openlogsub, $_syslogsub) = _wrap_for_sys_syslog();
+				} else {
+					die q{Unable to detect either Unix::Syslog or Sys::Syslog};
+				}
+			}
+		}
+
+		return $_openlogsub->($tag, 'pid,ndelay', $facility);
 	}
 
 	#***********************************************************************
@@ -608,21 +628,116 @@ sub hour_str {
 	# %RETURNS:
 	#  Nothing
 	# %DESCRIPTION:
-	#  Calls syslog, using Sys::Syslog
+	#  Calls syslog, either in Sys::Syslog or Unix::Syslog package
 	#***********************************************************************
 	sub md_syslog
 	{
 		my ($facility, $msg) = @_;
 
-		if(!$_syslogopen) {
+		if(!$_syslogsub) {
 			md_openlog('mimedefang.pl', $SyslogFacility);
 		}
 
 		if (defined $MsgID && $MsgID ne 'NOQUEUE') {
-			return Sys::Syslog::syslog($facility, '%s', $MsgID . ': ' . $msg);
+			return $_syslogsub->($facility, '%s', $MsgID . ': ' . $msg);
 		} else {
-			return Sys::Syslog::syslog($facility, '%s', $msg);
+			return $_syslogsub->($facility, '%s', $msg);
 		}
+	}
+
+	sub _wrap_for_unix_syslog
+	{
+
+		my $openlog = sub {
+			my ($id, $flags, $facility) = @_;
+
+			die q{first argument must be an identifier string} unless defined $id;
+			die q{second argument must be flag string} unless defined $flags;
+			die q{third argument must be a facility string} unless defined $facility;
+
+			return Unix::Syslog::openlog( $id, _convert_flags( $flags ), _convert_facility( $facility ) );
+		};
+
+		my $syslog = sub {
+			my $facility = shift;
+			return Unix::Syslog::syslog( _convert_facility( $facility ), @_);
+		};
+
+		return ($openlog, $syslog);
+	}
+
+	sub _wrap_for_sys_syslog
+	{
+
+		my $openlog  = sub {
+			# Debian Stretch version is 0.33_01...dammit!
+			my $ver = $Sys::Syslog::VERSION;
+			$ver =~ s/_.*//;
+			if( $ver < 0.16 ) {
+				# Older Sys::Syslog versions still need
+				# setlogsock().  RHEL5 still ships with 0.13 :(
+				Sys::Syslog::setlogsock([ 'unix', 'tcp', 'udp' ]);
+			}
+			return Sys::Syslog::openlog(@_);
+		};
+		my $syslog   = sub {
+			return Sys::Syslog::syslog(@_);
+		};
+
+		return ($openlog, $syslog);
+	}
+
+	sub _convert_flags
+	{
+		my($flags) = @_;
+
+		my $flag_map = {
+			pid     => Unix::Syslog::LOG_PID(),
+			ndelay  => Unix::Syslog::LOG_NDELAY(),
+		};
+
+		my $num = 0;
+		foreach my $thing (split(/,/, $flags)) {
+			next unless exists $flag_map->{$thing};
+			$num |= $flag_map->{$thing};
+		}
+		return $num;
+	}
+
+
+	sub _convert_facility
+	{
+		my($facility) = @_;
+
+		my $num = 0;
+		foreach my $thing (split(/\|/, $facility)) {
+			if (!defined($_fac_map) ||
+			    !exists($_fac_map->{$thing})) {
+				$_fac_map->{$thing} = _fac_to_num($thing);
+			}
+			next unless defined $_fac_map->{$thing};
+			$num |= $_fac_map->{$thing};
+		}
+		return $num;
+	}
+
+	my %special = (
+		error => 'err',
+		panic => 'emerg',
+	);
+
+	# Some of the Unix::Syslog 'macros' tag exports aren't
+	# constants, so we need to ignore them if found.
+	my %blacklisted = map { $_ => 1 } qw(mask upto pri makepri fac);
+
+        sub _fac_to_num
+	{
+		my ($thing) = @_;
+		return undef if exists $blacklisted{$thing};
+		$thing = $special{$thing} if exists $special{$thing};
+		$thing = 'LOG_' . uc($thing);
+		return undef unless grep { $_ eq $thing } @ {$Unix::Syslog::EXPORT_TAGS{macros} };
+		return eval "Unix::Syslog::$thing()";
 	}
 }
 
@@ -5387,7 +5502,7 @@ sub main {
 	# And print Perl module versions
 	print("\n");
 	my($version);
-	foreach $thing (qw(Archive::Zip Digest::SHA1 HTML::Parser IO::Socket MIME::Base64 MIME::Tools MIME::Words Mail::Mailer Mail::SpamAssassin Net::DNS Sys::Syslog )) {
+	foreach $thing (qw(Archive::Zip Digest::SHA1 HTML::Parser IO::Socket MIME::Base64 MIME::Tools MIME::Words Mail::Mailer Mail::SpamAssassin Net::DNS Unix::Syslog )) {
 	    unless (eval "require $thing") {
 		printf("%-30s: missing\n", $thing);
 		next;
